--- a/OCCodes/Sources/Info.plist
+++ b/OCCodes/Sources/Info.plist
@@ -22,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>想要使用您的摄像头</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>想要使用您的麦克风</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
