--- a/OCCodes/Sources/Info.plist
+++ b/OCCodes/Sources/Info.plist
@@ -26,6 +26,8 @@
 	<string>想要使用您的摄像头</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>想要使用您的麦克风</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>想要使用您的相册</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
